fix : sync vault and wallet
