# app/Http/Requests/Vault/WithdrawRequest.php
@@ -14,6 +14,7 @@ class WithdrawRequest extends FormRequest
     public function rules(): array
     {
         return [
+            'wallet_id' => ['required', 'string', 'exists:wallets,code'],
             'amount' => ['required', 'numeric', 'min:100', 'max:100000000'],
             'description' => ['nullable', 'string', 'max:255'],
         ];
@@ -22,6 +23,9 @@ class WithdrawRequest extends FormRequest
     public function messages(): array
     {
         return [
+            'wallet_id.required' => 'L\'ID du portefeuille est requis',
+            'wallet_id.string' => 'L\'ID du portefeuille doit être une chaîne de caractères',
+            'wallet_id.exists' => 'L\'ID du portefeuille n\'existe pas',
             'amount.required' => 'Le montant est requis',
             'amount.numeric' => 'Le montant doit être un nombre',
             'amount.min' => 'Le montant minimum est de 100',
